--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,56 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-bar {
+  height: 89px;
+  background-color: #2081c3;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 8px 0 0 8px;
+}
+
+.nav-bar ul {
+  padding-left: 50px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: #f7f9f9;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.beerImg img {
+  width: 500px;
+  height: 500px;
+  margin-top: 60px;
+}
+
+.beerImg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+footer {
+  height: 80px;
+  background-color: #0a2c42;
+  color: #f7f9f9;
+  font-size: 1.6rem;
+  padding: 1.2rem 0 0 1.2rem;
+}
