--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beer</title>
+    <link rel="stylesheet" href="/stylesheets/reset.css" />
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
   </head>
   <body>
-    <nav>
+    <nav class="nav-bar">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/beers">Beers</a></li>
@@ -14,5 +16,8 @@
       </ul>
     </nav>
     <%- body %>
+    <footer>
+      <p>Develop by Joaquin;)</p>
+    </footer>
   </body>
 </html>
