--- a/views/random-beer.ejs
+++ b/views/random-beer.ejs
@@ -1,3 +1,3 @@
 <%-include('./partials/beer.ejs',{beer}) %>
-<p><%= beer.food_pairing %></p>
+<p>Food Pairing: <%= beer.food_pairing %></p>
 <p><%= beer.contributed_by %></p>
