--- a/views/random-beer.ejs
+++ b/views/random-beer.ejs
@@ -1,3 +1,5 @@
+<h1>Random Beer</h1>
+
 <%-include('./partials/beer.ejs',{beer}) %>
 <p>Food Pairing: <%= beer.food_pairing %></p>
 <p><%= beer.contributed_by %></p>
