--- a/views/foundBeer.ejs
+++ b/views/foundBeer.ejs
@@ -1,4 +1,5 @@
+<h1>Found Beer</h1>
 <h3><%= beer.name %></h3>
-<img src="<%- beer.image_url  %>" alt="beerImage" />
+<img src="<%= beer.image_url %>" alt="" />
 <p><%= beer.description %></p>
 <p><%= beer.tagline %></p>
