--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
-<img src="/images/beer.png" alt="Beer glass" />
-<a href="/beers">Check the beers</a>
-<a href="/random-beer">Check a random beer</a>
+<div id="main-section">
+  <img src="/images/beer.png" alt="Beer glass" />
+  <a href="/beers">Check the beers</a>
+  <a href="/random-beer">Check a random beer</a>
+</div>
